--- a/9Zivota.inform/Index/Contents.html
+++ b/9Zivota.inform/Index/Contents.html
@@ -1197,10 +1197,11 @@
         <p><b>9Zivota by Andrej</b></p>
         <p>CONTENTS</p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Source text</span><span>68 words</span></li></ul>
+        <li class="leaded indent1"><span>Source text</span><span>378 words</span></li></ul>
         <p>EXTENSIONS</p>
         <p class="hangingin2"><span class="indexgrey">Included from the source text</span></p>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple Notifications &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Notifications.html' title="Vorple Notifications by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1058 words&nbsp;<a href="source:story.ni#line3"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders"><li class="leaded indent2"><span>Vorple Multimedia &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Multimedia.html' title="Vorple Multimedia by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>3906 words&nbsp;<a href="source:story.ni#line5"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey">Included by the extension Vorple Notifications</span></p>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple.html' title="Vorple by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>5666 words</span></li></ul>
         <p class="hangingin2"><span class="indexgrey">Included automatically by Inform</span></p>
@@ -1386,7 +1387,7 @@
                                     <b>Table of Locale Priorities</b>&nbsp;&nbsp;&nbsp;&nbsp;
                                 </td>
                                 <td style="padding-top: 3px;" align="left" valign="top">
-                                    <i><span class="smaller">2 columns x 2 rows (1 blank, one for each thing)</span></i>
+                                    <i><span class="smaller">2 columns x 5 rows (4 blank, one for each thing)</span></i>
                                 </td>
                             </tr>
                             <tr>
