--- a/9Zivota.materials/Release/index.html
+++ b/9Zivota.materials/Release/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Andrej" />
   <meta name="description" content="A page for the game 9Zivota by Andrej." />
   <link rel="stylesheet" href="style.css" type="text/css" media="all" />
- </head>
+ <link rel='stylesheet' href='my.css' type='text/css' media='all'></link></head>
 <body>
 <div class="container">
 <div class="coverimage"><span><a href="Cover.jpg"><img src="Small Cover.jpg" border="1"></a></span></div>
@@ -17,7 +17,7 @@
 </div>
 <div class="links">
 	<ul>
-	<li><div class="download"><a href="9Zivota.gblorb">Story File</a> <span class="filetype">(Blorb,&nbsp;586KB)</span></div></li>
+	<li><div class="download"><a href="9Zivota.gblorb">Story File</a> <span class="filetype">(Blorb,&nbsp;594KB)</span></div></li>
 	<div class="auxiliary"><li><a href="play.html">Play In-Browser</a> <span class="filetype">(link)</span></li></div>
 	</ul>
 </div>
