--- a/9Zivota.inform/Index/Contents.html
+++ b/9Zivota.inform/Index/Contents.html
@@ -1197,13 +1197,38 @@
         <p><b>9Zivota by Andrej</b></p>
         <p>CONTENTS</p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Source text</span><span>531 words</span></li></ul>
+        <li class="leaded indent1"><span>Preamble</span><span>35 words</span></li></ul>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 1 - Game setup</span><span>60 words&nbsp;<a href="source:story.ni#line3"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 2 - Rooms</span><span>350 words&nbsp;<a href="source:story.ni#line23"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>Garage, Kitchen, Living room, Hallway, Basement, Dining room, Attic, Pantry, Office, Bathroom, Garden, Bedrrom</i></span></p>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 3 - Doors</span><span>121 words&nbsp;<a href="source:story.ni#line49"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>spike pit, brown door, red door, red key, rotating blades</i></span></p>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 4 - Items</span><span>30 words&nbsp;<a href="source:story.ni#line77"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>rope, bone</i></span></p>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 5 - Dying</span><span>161 words&nbsp;<a href="source:story.ni#line86"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 6 - Inventory</span><span>143 words&nbsp;<a href="source:story.ni#line114"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 7 - Title screen</span><span>73 words&nbsp;<a href="source:story.ni#line158"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 8 - Player's name</span><span>159 words&nbsp;<a href="source:story.ni#line176"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 9 - Miscellanous</span><span>4 words&nbsp;<a href="source:story.ni#line208"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p>EXTENSIONS</p>
         <p class="hangingin2"><span class="indexgrey">Included from the source text</span></p>
-        <ul class="leaders"><li class="leaded indent2"><span>Vorple Notifications &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Notifications.html' title="Vorple Notifications by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1058 words&nbsp;<a href="source:story.ni#line3"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <ul class="leaders"><li class="leaded indent2"><span>Vorple Multimedia &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Multimedia.html' title="Vorple Multimedia by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>3906 words&nbsp;<a href="source:story.ni#line5"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders"><li class="leaded indent2"><span>Vorple Notifications &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Notifications.html' title="Vorple Notifications by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1058 words&nbsp;<a href="source:story.ni#line5"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders"><li class="leaded indent2"><span>Vorple Multimedia &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Multimedia.html' title="Vorple Multimedia by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>3906 words&nbsp;<a href="source:story.ni#line7"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders"><li class="leaded indent2"><span>Vorple Screen Effects &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Screen%20Effects.html' title="Vorple Screen Effects by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>2616 words&nbsp;<a href="source:story.ni#line9"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders"><li class="leaded indent2"><span>Vorple Hyperlinks &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Hyperlinks.html' title="Vorple Hyperlinks by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1817 words&nbsp;<a href="source:story.ni#line11"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey">Included by the extension Vorple Notifications</span></p>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple.html' title="Vorple by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>5666 words</span></li></ul>
+        <p class="hangingin2"><span class="indexgrey">Included by the extension Vorple Screen Effects</span></p>
+        <ul class="leaders"><li class="leaded indent2"><span>Basic Screen Effects &nbsp;<a href='inform://Extensions/Extensions/Emily%20Short/Basic%20Screen%20Effects.html' title="Basic Screen Effects by Emily Short" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Emily Short <span class="smaller">version 8</span> </span><span>2223 words</span></li></ul>
         <p class="hangingin2"><span class="indexgrey">Included automatically by Inform</span></p>
         <ul class="leaders"><li class="leaded indent2"><span>Basic Inform <span class="smaller">version 1</span> </span><span>7691 words</span></li></ul>
         <ul class="leaders"><li class="leaded indent2"><span>English Language &nbsp;<a href='inform://Extensions/Extensions/Graham%20Nelson/English%20Language.html' title="English Language by Graham Nelson" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;<span class="smaller">version 1</span> </span><span>2328 words</span></li></ul>
@@ -1332,6 +1357,51 @@
             <p class="in1"><table width="100%" cellpadding="6" cellspacing="0" border="0" class="indexmorebox">
                 <tr>
                     <td>
+                        <p><i>Basic Screen Effects</i></p>
+                        <table border="0" cellspacing="0" cellpadding="0">
+                            <tr>
+                                <td style="padding-top: 3px;" align="left" valign="top">
+                                    <b>Table of Ordinary Status</b>&nbsp;<a href='inform://Extensions/Extensions/Emily%20Short/Basic%20Screen%20Effects.html' title="Basic Screen Effects by Emily Short" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                                </td>
+                                <td style="padding-top: 3px;" align="left" valign="top">
+                                    <i><span class="smaller">3 columns x 1 row</span></i>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="left" valign="top">
+                                    &nbsp;&nbsp;col 1:&nbsp;&nbsp;left&nbsp;<a href="javascript:pasteCode('left entry')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                                </td>
+                                <td align="left" valign="top">
+                                    of texts
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="left" valign="top">
+                                    &nbsp;&nbsp;col 2:&nbsp;&nbsp;central&nbsp;<a href="javascript:pasteCode('central entry')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                                </td>
+                                <td align="left" valign="top">
+                                    of texts
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="left" valign="top">
+                                    &nbsp;&nbsp;col 3:&nbsp;&nbsp;right&nbsp;<a href="javascript:pasteCode('right entry')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                                </td>
+                                <td align="left" valign="top">
+                                    of texts
+                                </td>
+                            </tr>
+                        </table>
+
+                    </td>
+                </tr>
+            </table>
+            </p>
+        </div>
+        <div id="extra2" style="display: none;">
+            <p class="in1"><table width="100%" cellpadding="6" cellspacing="0" border="0" class="indexmorebox">
+                <tr>
+                    <td>
                         <p><i>Standard Rules</i></p>
                         <table border="0" cellspacing="0" cellpadding="0">
                             <tr>
@@ -1387,7 +1457,7 @@
                                     <b>Table of Locale Priorities</b>&nbsp;&nbsp;&nbsp;&nbsp;
                                 </td>
                                 <td style="padding-top: 3px;" align="left" valign="top">
-                                    <i><span class="smaller">2 columns x 6 rows (5 blank, one for each thing)</span></i>
+                                    <i><span class="smaller">2 columns x 9 rows (8 blank, one for each thing)</span></i>
                                 </td>
                             </tr>
                             <tr>
