Add a tutorial with difficulty selection.

--- a/9Zivota.inform/Index/Contents.html
+++ b/9Zivota.inform/Index/Contents.html
@@ -1199,32 +1199,39 @@
         <ul class="leaders">
         <li class="leaded indent1"><span>Preamble</span><span>35 words</span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 1 - Game setup</span><span>60 words&nbsp;<a href="source:story.ni#line3"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 1 - Game setup</span><span>66 words&nbsp;<a href="source:story.ni#line3"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 2 - Rooms</span><span>350 words&nbsp;<a href="source:story.ni#line23"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>Garage, Kitchen, Living room, Hallway, Basement, Dining room, Attic, Pantry, Office, Bathroom, Garden, Bedrrom</i></span></p>
+        <li class="leaded indent1"><span>Chapter 2 - Rooms</span><span>71 words&nbsp;<a href="source:story.ni#line25"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>Garage, Hallway, Storeroom, Entrance hall</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 3 - Doors</span><span>121 words&nbsp;<a href="source:story.ni#line49"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>spike pit, brown door, red door, red key, rotating blades</i></span></p>
+        <li class="leaded indent1"><span>Chapter 3 - Doors</span><span>95 words&nbsp;<a href="source:story.ni#line57"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>spike pit, Kitchen, red door, Living room, Pantry, red key, rotating blades, Office, Bathroom</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 4 - Items</span><span>30 words&nbsp;<a href="source:story.ni#line77"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>rope, bone</i></span></p>
+        <li class="leaded indent1"><span>Chapter 4 - Items</span><span>56 words&nbsp;<a href="source:story.ni#line85"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>rope, bone, chest, coin</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 5 - Dying</span><span>161 words&nbsp;<a href="source:story.ni#line86"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 5 - Dying</span><span>161 words&nbsp;<a href="source:story.ni#line101"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 6 - Inventory</span><span>143 words&nbsp;<a href="source:story.ni#line114"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 6 - Inventory</span><span>86 words&nbsp;<a href="source:story.ni#line129"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 7 - Title screen</span><span>73 words&nbsp;<a href="source:story.ni#line158"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 7 - Title screen</span><span>65 words&nbsp;<a href="source:story.ni#line145"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 8 - Player's name</span><span>159 words&nbsp;<a href="source:story.ni#line176"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 8 - Player's name</span><span>195 words&nbsp;<a href="source:story.ni#line160"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 9 - Miscellanous</span><span>4 words&nbsp;<a href="source:story.ni#line208"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 9 - Miscellanous</span><span>4 words&nbsp;<a href="source:story.ni#line192"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 10 - Tutorial</span><span>389 words&nbsp;<a href="source:story.ni#line194"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>knife</i></span></p>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 11 - Difficulty</span><span>298 words&nbsp;<a href="source:story.ni#line284"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>Difficulty, normal, hard, unforgiving, unknown</i></span></p>
         <p>EXTENSIONS</p>
         <p class="hangingin2"><span class="indexgrey">Included from the source text</span></p>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple Notifications &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Notifications.html' title="Vorple Notifications by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1058 words&nbsp;<a href="source:story.ni#line5"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple Multimedia &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Multimedia.html' title="Vorple Multimedia by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>3906 words&nbsp;<a href="source:story.ni#line7"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple Screen Effects &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Screen%20Effects.html' title="Vorple Screen Effects by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>2616 words&nbsp;<a href="source:story.ni#line9"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple Hyperlinks &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Hyperlinks.html' title="Vorple Hyperlinks by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1817 words&nbsp;<a href="source:story.ni#line11"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders"><li class="leaded indent2"><span>Vorple Tooltips &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Tooltips.html' title="Vorple Tooltips by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1801 words&nbsp;<a href="source:story.ni#line13"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey">Included by the extension Vorple Notifications</span></p>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple.html' title="Vorple by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>5666 words</span></li></ul>
         <p class="hangingin2"><span class="indexgrey">Included by the extension Vorple Screen Effects</span></p>
@@ -1457,7 +1464,7 @@
                                     <b>Table of Locale Priorities</b>&nbsp;&nbsp;&nbsp;&nbsp;
                                 </td>
                                 <td style="padding-top: 3px;" align="left" valign="top">
-                                    <i><span class="smaller">2 columns x 9 rows (8 blank, one for each thing)</span></i>
+                                    <i><span class="smaller">2 columns x 11 rows (10 blank, one for each thing)</span></i>
                                 </td>
                             </tr>
                             <tr>
