--- a/9Zivota.inform/Index/Details/77_A.html
+++ b/9Zivota.inform/Index/Details/77_A.html
@@ -885,15 +885,15 @@
     </table>
 
     <hr>
-    <p><b>Defined in the source - New actions</b><br><b>naming the player</b></p>
+    <p><b>Defined in the source - Map</b><br><b>map checking</b></p>
     <hr>
-    <p><b>Naming the player <span class="indexdullblue">some text</span> </b>&nbsp;<a href="source:story.ni#line177"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> named the player): applying to one topic</p>
+    <p><b>Map checking </b>&nbsp;<a href="source:story.ni#line304"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> Map mapmapchecked): applying to nothing</p>
     <hr>
     <p><b>Typed commands leading to this action</b></p>
-    <p>&quot;name is [text]&quot;&nbsp;<a href="source:story.ni#line176"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>naming the player</i>&nbsp;<a href=Details/77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+    <p>&quot;map&quot;&nbsp;<a href="source:story.ni#line304"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>map checking</i>&nbsp;<a href=Details/77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(let T be the topic understood; ...)&nbsp;<a href="source:story.ni#line179"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p><p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line310"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     </p>
 
     <!--CONTENT ENDS-->
