--- a/9Zivota.inform/Index/Details/77_A.html
+++ b/9Zivota.inform/Index/Details/77_A.html
@@ -885,15 +885,15 @@
     </table>
 
     <hr>
-    <p><b>Defined in the source - Map</b><br><b>map checking</b></p>
+    <p><b>Defined in the source - Map</b><br><b>map</b></p>
     <hr>
-    <p><b>Map checking </b>&nbsp;<a href="source:story.ni#line304"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> Map mapmapchecked): applying to nothing</p>
+    <p><b>Map </b>&nbsp;<a href="source:story.ni#line392"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> ): applying to nothing</p>
     <hr>
     <p><b>Typed commands leading to this action</b></p>
-    <p>&quot;map&quot;&nbsp;<a href="source:story.ni#line304"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>map checking</i>&nbsp;<a href=Details/77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+    <p>&quot;map&quot;&nbsp;<a href="source:story.ni#line392"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>map</i>&nbsp;<a href=Details/77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line310"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p><p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line394"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     </p>
 
     <!--CONTENT ENDS-->
