Add new shop layout and buying logic.

--- a/9Zivota.inform/Index/Contents.html
+++ b/9Zivota.inform/Index/Contents.html
@@ -1201,43 +1201,49 @@
         <ul class="leaders">
         <li class="leaded indent1"><span>Chapter 1 - Game setup</span><span>115 words&nbsp;<a href="source:story.ni#line3"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 2 - Rooms</span><span>211 words&nbsp;<a href="source:story.ni#line41"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 2 - Rooms</span><span>446 words&nbsp;<a href="source:story.ni#line41"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>Garage, Hallway, Storeroom, Entrance hall, Kitchen, Living room, Library, Basement, Dining room, Attic, Pantry, Study, Bathroom, Garden, Bedroom</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 3 - Doors</span><span>28 words&nbsp;<a href="source:story.ni#line77"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>spike pit</i></span></p>
+        <li class="leaded indent1"><span>Chapter 3 - Doors</span><span>102 words&nbsp;<a href="source:story.ni#line77"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>brown door, spike pit, red door, rotating blades</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 4 - Items</span><span>66 words&nbsp;<a href="source:story.ni#line83"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>chest, coin, rope, Brown key, secret drawer, Note, desk in the Entrance hall</i></span></p>
+        <li class="leaded indent1"><span>Chapter 4 - Items</span><span>266 words&nbsp;<a href="source:story.ni#line95"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>chest, coin, knife, red key, brown key, secret drawer, note, desk in the Entrance hall, rope, fridge, bone, cabinet, small bottle, golden chest, golden key, coins, black chest, black key</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 5 - Dying</span><span>161 words&nbsp;<a href="source:story.ni#line99"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 5 - Dying</span><span>357 words&nbsp;<a href="source:story.ni#line145"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 6 - Inventory</span><span>86 words&nbsp;<a href="source:story.ni#line127"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 6 - Inventory</span><span>86 words&nbsp;<a href="source:story.ni#line216"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 7 - Title screen</span><span>65 words&nbsp;<a href="source:story.ni#line143"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 7 - Title screen</span><span>65 words&nbsp;<a href="source:story.ni#line232"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 8 - Player's name</span><span>195 words&nbsp;<a href="source:story.ni#line158"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 8 - Player's name</span><span>195 words&nbsp;<a href="source:story.ni#line247"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 9 - Miscellanous</span><span>4 words&nbsp;<a href="source:story.ni#line190"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 9 - Miscellanous</span><span>4 words&nbsp;<a href="source:story.ni#line279"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 10 - Tutorial</span><span>405 words&nbsp;<a href="source:story.ni#line192"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>knife</i></span></p>
+        <li class="leaded indent1"><span>Chapter 10 - Tutorial</span><span>447 words&nbsp;<a href="source:story.ni#line281"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 11 - Difficulty</span><span>349 words&nbsp;<a href="source:story.ni#line290"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 11 - Difficulty</span><span>349 words&nbsp;<a href="source:story.ni#line384"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>Difficulty, normal, hard, unforgiving, unknown</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 12 - Status line</span><span>56 words&nbsp;<a href="source:story.ni#line362"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 12 - Status line</span><span>56 words&nbsp;<a href="source:story.ni#line456"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 13 - Map</span><span>76 words&nbsp;<a href="source:story.ni#line371"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 13 - Map</span><span>58 words&nbsp;<a href="source:story.ni#line465"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 14 - Entrance hall</span><span>417 words&nbsp;<a href="source:story.ni#line396"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>red drawer, blue drawer, green drawer, pink drawer</i></span></p>
+        <li class="leaded indent1"><span>Chapter 14 - Entrance hall</span><span>435 words&nbsp;<a href="source:story.ni#line490"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>pink drawer, green drawer, red drawer, blue drawer</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 15</span><span>860 words&nbsp;<a href="source:story.ni#line466"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>Rotirajuce ostrice, Konopac, Frizider, Kost, Ormaric, Bocica, Zlatna skrinja, Zlatni kljuc, Zlatnici, Crna skrinja, Crni kljuc, Stvorenje, Boris</i></span></p>
+        <li class="leaded indent1"><span>Chapter 15 - Basement</span><span>91 words&nbsp;<a href="source:story.ni#line560"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>beast</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 16 - Buying</span><span>684 words&nbsp;<a href="source:story.ni#line627"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>Blagajna, Blagajna condition, Crnk, Ok, Ck, Ko, Og, prazna, Oklop, Crveni kljuc, Kobasica, Ogrlica</i></span></p>
+        <li class="leaded indent1"><span>Chapter 16 - Attic</span><span>515 words&nbsp;<a href="source:story.ni#line571"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>Shop, armor, sausage, necklace, Price</i></span></p>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 17</span><span>130 words&nbsp;<a href="source:story.ni#line676"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 18 - Dialog</span><span>152 words&nbsp;<a href="source:story.ni#line700"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>Boris</i></span></p>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Chapter 19 - Ending</span><span>54 words&nbsp;<a href="source:story.ni#line723"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p>EXTENSIONS</p>
         <p class="hangingin2"><span class="indexgrey">Included from the source text</span></p>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple Notifications &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Notifications.html' title="Vorple Notifications by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1058 words&nbsp;<a href="source:story.ni#line5"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
@@ -1378,10 +1384,34 @@
         <table border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <b>Table of Boris Responses</b>&nbsp;<a href="source:story.ni#line618"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>Table of Shop Items</b>&nbsp;<a href="source:story.ni#line612"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <i><span class="smaller">3 columns x 2 rows</span></i>
+                    <i><span class="smaller">2 columns x 5 rows</span></i>
+                </td>
+            </tr>
+            <tr>
+                <td align="left" valign="top">
+                    &nbsp;&nbsp;col 1:&nbsp;&nbsp;Item&nbsp;<a href="javascript:pasteCode('Item entry')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    of objects
+                </td>
+            </tr>
+            <tr>
+                <td align="left" valign="top">
+                    &nbsp;&nbsp;col 2:&nbsp;&nbsp;Cost&nbsp;<a href="javascript:pasteCode('Cost entry')"><img border=0 src=inform:/doc_images/paste.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td align="left" valign="top">
+                    of prices
+                </td>
+            </tr>
+            <tr>
+                <td style="padding-top: 3px;" align="left" valign="top">
+                    <b>Table of Boris Responses</b>&nbsp;<a href="source:story.ni#line704"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                </td>
+                <td style="padding-top: 3px;" align="left" valign="top">
+                    <i><span class="smaller">3 columns x 1 row</span></i>
                 </td>
             </tr>
             <tr>
@@ -1514,7 +1544,7 @@
                                     <b>Table of Locale Priorities</b>&nbsp;&nbsp;&nbsp;&nbsp;
                                 </td>
                                 <td style="padding-top: 3px;" align="left" valign="top">
-                                    <i><span class="smaller">2 columns x 33 rows (32 blank, one for each thing)</span></i>
+                                    <i><span class="smaller">2 columns x 34 rows (33 blank, one for each thing)</span></i>
                                 </td>
                             </tr>
                             <tr>
