--- a/9Zivota.inform/Index/Details/81_A.html
+++ b/9Zivota.inform/Index/Details/81_A.html
@@ -885,18 +885,16 @@
     </table>
 
     <hr>
-    <p><b>Defined in the source - Chapter 15</b><br>nahrani&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, pojedi&nbsp;<a href=80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>casting eugen</b>, casting mijau&nbsp;<a href=82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></p>
+    <p><b>Defined in the source - Ending</b><br><b>casting meow</b></p>
     <hr>
-    <p><b>Casting Eugen </b>&nbsp;<a href="source:story.ni#line600"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> cast Eugen): applying to nothing</p>
+    <p><b>Casting meow </b>&nbsp;<a href="source:story.ni#line727"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> cast meow): applying to nothing</p>
     <hr>
     <p><b>Typed commands leading to this action</b></p>
-    <p>&quot;say Eugen&quot;&nbsp;<a href="source:story.ni#line599"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting eugen</i>&nbsp;<a href=Details/81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
-    &quot;Eugen&quot;&nbsp;<a href="source:story.ni#line599"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting eugen</i>&nbsp;<a href=Details/81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+    <p>&quot;meow&quot;&nbsp;<a href="source:story.ni#line725"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting meow</i>&nbsp;<a href=Details/81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line411"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line601"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(say "Nestao si u oblaku magle."; ...)&nbsp;<a href="source:story.ni#line604"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line506"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line729"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     </p>
 
     <!--CONTENT ENDS-->
