--- a/9Zivota.inform/Index/Details/82_A.html
+++ b/9Zivota.inform/Index/Details/82_A.html
@@ -885,17 +885,16 @@
     </table>
 
     <hr>
-    <p><b>Defined in the source - Chapter 15</b><br>nahrani&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, pojedi&nbsp;<a href=80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, casting eugen&nbsp;<a href=81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>casting mijau</b></p>
+    <p><b>Defined in the source - Ending</b><br><b>casting meow</b></p>
     <hr>
-    <p><b>Casting Mijau </b>&nbsp;<a href="source:story.ni#line609"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> cast Mijau): applying to nothing</p>
+    <p><b>Casting meow </b>&nbsp;<a href="source:story.ni#line723"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> cast meow): applying to nothing</p>
     <hr>
     <p><b>Typed commands leading to this action</b></p>
-    <p>&quot;Mijau&quot;&nbsp;<a href="source:story.ni#line608"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting mijau</i>&nbsp;<a href=Details/82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
-    &quot;Mijau&quot;&nbsp;<a href="source:story.ni#line608"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting mijau</i>&nbsp;<a href=Details/82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+    <p>&quot;meow&quot;&nbsp;<a href="source:story.ni#line721"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting meow</i>&nbsp;<a href=Details/82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line411"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line610"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line504"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line725"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     </p>
 
     <!--CONTENT ENDS-->
