--- a/9Zivota.inform/Index/Details/79_A.html
+++ b/9Zivota.inform/Index/Details/79_A.html
@@ -885,16 +885,18 @@
     </table>
 
     <hr>
-    <p><b>Defined in the source - Chapter 15</b><br><b>nahrani</b>, pojedi&nbsp;<a href=80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, casting eugen&nbsp;<a href=81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, casting mijau&nbsp;<a href=82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></p>
+    <p><b>Defined in the source - Attic</b><br><b>purchase</b></p>
     <hr>
-    <p><b>Nahrani <span class="indexdullblue">something</span> </b>&nbsp;<a href="source:story.ni#line536"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> ): applying to one visible thing</p>
+    <p><b>Purchase <span class="indexdullblue">something</span> </b>&nbsp;<a href="source:story.ni#line653"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> ): applying to one thing</p>
     <hr>
     <p><b>Typed commands leading to this action</b></p>
-    <p>&quot;daj [someone] kost&quot;&nbsp;<a href="source:story.ni#line537"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>nahrani</i>&nbsp;<a href=Details/79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+    <p>&quot;buy [thing]&quot;&nbsp;<a href="source:story.ni#line654"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>purchase</i>&nbsp;<a href=Details/79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line411"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line539"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line506"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;(let price wanted be $0; ...)&nbsp;<a href="source:story.ni#line656"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(let price wanted be $0; ...)&nbsp;<a href="source:story.ni#line664"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">report&nbsp;&nbsp;&nbsp;&nbsp;(say "You now have [price of player] remaining in your wallet.")&nbsp;<a href="source:story.ni#line673"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     </p>
 
     <!--CONTENT ENDS-->
