--- a/9Zivota.inform/Index/Details/80_A.html
+++ b/9Zivota.inform/Index/Details/80_A.html
@@ -885,16 +885,17 @@
     </table>
 
     <hr>
-    <p><b>Defined in the source - Chapter 15</b><br>nahrani&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>pojedi</b>, casting eugen&nbsp;<a href=81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, casting mijau&nbsp;<a href=82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></p>
+    <p><b>Defined in the source - Chapter 17</b><br><b>casting player name</b></p>
     <hr>
-    <p><b>Pojedi <span class="indexdullblue">something</span> </b>&nbsp;<a href="source:story.ni#line547"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> ): applying to one visible thing</p>
+    <p><b>Casting player name </b>&nbsp;<a href="source:story.ni#line690"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> cast player name): applying to nothing</p>
     <hr>
     <p><b>Typed commands leading to this action</b></p>
-    <p>&quot;pojedi [something]&quot;&nbsp;<a href="source:story.ni#line548"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>pojedi</i>&nbsp;<a href=Details/80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+    <p>&quot;cast name&quot;&nbsp;<a href="source:story.ni#line689"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting player name</i>&nbsp;<a href=Details/80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line411"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line550"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line506"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line692"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(say "You disappeared into a cloud of fog."; ...)&nbsp;<a href="source:story.ni#line696"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     </p>
 
     <!--CONTENT ENDS-->
