--- a/9Zivota.inform/Index/Contents.html
+++ b/9Zivota.inform/Index/Contents.html
@@ -1212,38 +1212,39 @@
         <ul class="leaders">
         <li class="leaded indent1"><span>Chapter 5 - Dying</span><span>357 words&nbsp;<a href="source:story.ni#line145"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 6 - Inventory</span><span>86 words&nbsp;<a href="source:story.ni#line216"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 6 - Inventory</span><span>332 words&nbsp;<a href="source:story.ni#line216"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>backpack</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 7 - Title screen</span><span>65 words&nbsp;<a href="source:story.ni#line232"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 7 - Title screen</span><span>65 words&nbsp;<a href="source:story.ni#line300"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 8 - Player's name</span><span>195 words&nbsp;<a href="source:story.ni#line247"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 8 - Player's name</span><span>195 words&nbsp;<a href="source:story.ni#line315"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 9 - Miscellanous</span><span>4 words&nbsp;<a href="source:story.ni#line279"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 9 - Miscellanous</span><span>4 words&nbsp;<a href="source:story.ni#line347"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 10 - Tutorial</span><span>447 words&nbsp;<a href="source:story.ni#line281"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 10 - Tutorial</span><span>450 words&nbsp;<a href="source:story.ni#line349"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 11 - Difficulty</span><span>349 words&nbsp;<a href="source:story.ni#line384"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 11 - Difficulty</span><span>352 words&nbsp;<a href="source:story.ni#line453"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>Difficulty, normal, hard, unforgiving, unknown</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 12 - Status line</span><span>56 words&nbsp;<a href="source:story.ni#line456"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 12 - Status line</span><span>56 words&nbsp;<a href="source:story.ni#line526"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 13 - Map</span><span>58 words&nbsp;<a href="source:story.ni#line465"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 13 - Map</span><span>58 words&nbsp;<a href="source:story.ni#line535"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 14 - Entrance hall</span><span>435 words&nbsp;<a href="source:story.ni#line490"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 14 - Entrance hall</span><span>435 words&nbsp;<a href="source:story.ni#line560"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>pink drawer, green drawer, red drawer, blue drawer</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 15 - Basement</span><span>91 words&nbsp;<a href="source:story.ni#line560"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 15 - Basement</span><span>91 words&nbsp;<a href="source:story.ni#line630"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>beast</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 16 - Attic</span><span>515 words&nbsp;<a href="source:story.ni#line571"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 16 - Attic</span><span>515 words&nbsp;<a href="source:story.ni#line641"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>Shop, armor, sausage, necklace, Price</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 17</span><span>130 words&nbsp;<a href="source:story.ni#line676"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 17</span><span>130 words&nbsp;<a href="source:story.ni#line746"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 18 - Dialog</span><span>152 words&nbsp;<a href="source:story.ni#line700"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 18 - Dialog</span><span>152 words&nbsp;<a href="source:story.ni#line770"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>Boris</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 19 - Ending</span><span>54 words&nbsp;<a href="source:story.ni#line723"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Chapter 19 - Ending</span><span>54 words&nbsp;<a href="source:story.ni#line793"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p>EXTENSIONS</p>
         <p class="hangingin2"><span class="indexgrey">Included from the source text</span></p>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple Notifications &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Notifications.html' title="Vorple Notifications by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1058 words&nbsp;<a href="source:story.ni#line5"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
@@ -1384,7 +1385,7 @@
         <table border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <b>Table of Shop Items</b>&nbsp;<a href="source:story.ni#line612"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>Table of Shop Items</b>&nbsp;<a href="source:story.ni#line682"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td style="padding-top: 3px;" align="left" valign="top">
                     <i><span class="smaller">2 columns x 5 rows</span></i>
@@ -1408,7 +1409,7 @@
             </tr>
             <tr>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <b>Table of Boris Responses</b>&nbsp;<a href="source:story.ni#line704"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>Table of Boris Responses</b>&nbsp;<a href="source:story.ni#line774"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td style="padding-top: 3px;" align="left" valign="top">
                     <i><span class="smaller">3 columns x 1 row</span></i>
@@ -1544,7 +1545,7 @@
                                     <b>Table of Locale Priorities</b>&nbsp;&nbsp;&nbsp;&nbsp;
                                 </td>
                                 <td style="padding-top: 3px;" align="left" valign="top">
-                                    <i><span class="smaller">2 columns x 34 rows (33 blank, one for each thing)</span></i>
+                                    <i><span class="smaller">2 columns x 35 rows (34 blank, one for each thing)</span></i>
                                 </td>
                             </tr>
                             <tr>
